tests/invalid/type/multiple_static_errors.pts
import Io;

function main(): void {
    string t = Io.tempPath();
    TextFile t = Io.openText(t, "w");
    int x = "oops";
    doesNotExist();
}
